examples/fail/unreachable_after_return.hax
sub f() -> Void {
  return;
  var int $x = 1;
}
